--- a/index.html
+++ b/index.html
@@ -7,140 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <title>트리</title>
-    <style>
-      body {
-        margin: 0;
-        background-color: #111;
-        color: #eee;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-          Helvetica, Arial, sans-serif;
-        overflow: hidden; /* 전체 스크롤 방지 */
-        touch-action: none; /* 모바일에서 불필요한 제스처 방지 */
-      }
-
-      /* 눈 내리는 효과를 위한 캔버스 (추가됨) */
-      #snowCanvas {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 0; /* 배경보다 위, 트리와 겹치게 배치 */
-        pointer-events: none; /* 클릭 이벤트를 통과시켜 조작 방해 안 함 */
-      }
-
-      /* 설정 토글 버튼 (플로팅 버튼) */
-      .toggle-btn {
-        position: absolute;
-        bottom: 20px;
-        right: 20px;
-        width: 50px;
-        height: 50px;
-        background-color: rgba(255, 255, 255, 0.2);
-        border: 1px solid rgba(255, 255, 255, 0.4);
-        border-radius: 50%;
-        color: white;
-        font-size: 24px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        z-index: 10000;
-        backdrop-filter: blur(5px);
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-        transition: transform 0.2s;
-      }
-      .toggle-btn:active {
-        transform: scale(0.9);
-      }
-
-      /* 컨트롤 패널 (모바일 최적화: 하단 서랍형) */
-      .controls {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        background: rgba(0, 0, 0, 0.3);
-        padding: 20px 20px 40px 20px; /* 하단 여백 확보 */
-        border-radius: 20px 20px 0 0;
-        z-index: 9999;
-        max-height: 60vh; /* 화면의 60%까지만 차지 */
-        overflow-y: auto; /* 내부 스크롤 허용 */
-        box-sizing: border-box;
-        transform: translateY(110%); /* 기본적으로 숨김 */
-        transition: transform 0.3s cubic-bezier(0.25, 1, 0.5, 1);
-      }
-
-      .controls.active {
-        transform: translateY(0); /* 활성화 시 올라옴 */
-      }
-
-      .control-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 15px;
-        font-weight: bold;
-        font-size: 1.1rem;
-      }
-
-      .control-group {
-        margin-bottom: 15px;
-      }
-
-      label {
-        display: flex;
-        justify-content: space-between;
-        font-size: 13px;
-        margin-bottom: 8px;
-        color: #ccc;
-      }
-
-      /* 현재 값 표시용 span */
-      label span {
-        color: #4caf50;
-        font-weight: bold;
-      }
-
-      /* 슬라이더 스타일 (터치 친화적) */
-      input[type='range'] {
-        width: 100%;
-        height: 6px;
-        background: #444;
-        border-radius: 3px;
-        outline: none;
-        -webkit-appearance: none;
-      }
-
-      input[type='range']::-webkit-slider-thumb {
-        -webkit-appearance: none;
-        width: 24px; /* 터치 타겟 확대 */
-        height: 24px;
-        background: #4caf50;
-        border-radius: 50%;
-        cursor: pointer;
-        box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-      }
-
-      /* 점 스타일 */
-      .tree-dot {
-        position: absolute;
-        border-radius: 50%;
-        pointer-events: none; /* 클릭 통과 */
-        will-change: transform, opacity;
-      }
-
-      /* 1번째: 하얀색, 2번째: 초록색: 3번째:빨간색 */
-      .tree-dot:nth-child(3n + 1) {
-        background-color: #fff;
-      }
-      .tree-dot:nth-child(3n + 2) {
-        background-color: rgb(101, 248, 101);
-      }
-      .tree-dot:nth-child(3n + 3) {
-        background-color: rgb(255, 71, 71);
-      }
-    </style>
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
     <canvas id="snowCanvas"></canvas>
@@ -214,211 +81,6 @@
 
     <div id="dot-container"></div>
 
-    <script>
-      // ==========================================
-      // [1] 눈 내리는 효과 (Snow Effect Logic)
-      // ==========================================
-      const snowCanvas = document.getElementById('snowCanvas');
-      const snowCtx = snowCanvas.getContext('2d');
-
-      let snowW = window.innerWidth;
-      let snowH = window.innerHeight;
-      snowCanvas.width = snowW;
-      snowCanvas.height = snowH;
-
-      const maxSnowflakes = 100; // 모바일 성능 고려하여 개수 제한
-      const snowflakes = [];
-
-      for (let i = 0; i < maxSnowflakes; i++) {
-        snowflakes.push({
-          x: Math.random() * snowW,
-          y: Math.random() * snowH,
-          r: Math.random() * 2 + 1, // 눈송이 크기
-          d: Math.random() * maxSnowflakes, // 밀도 계산용 (속도에 영향)
-        });
-      }
-
-      function drawSnow() {
-        snowCtx.clearRect(0, 0, snowW, snowH);
-        snowCtx.fillStyle = 'rgba(255, 255, 255, 0.3)';
-        snowCtx.beginPath();
-
-        for (let i = 0; i < maxSnowflakes; i++) {
-          const f = snowflakes[i];
-          snowCtx.moveTo(f.x, f.y);
-          snowCtx.arc(f.x, f.y, f.r, 0, Math.PI * 2, true);
-        }
-        snowCtx.fill();
-        updateSnow();
-        requestAnimationFrame(drawSnow);
-      }
-
-      let angleSnow = 0;
-      function updateSnow() {
-        angleSnow += 0.01;
-        for (let i = 0; i < maxSnowflakes; i++) {
-          const f = snowflakes[i];
-          // 아래로 떨어지는 움직임 + 좌우 흔들림(sin)
-          f.y += Math.cos(angleSnow + f.d) + 1 + f.r / 2;
-          f.x += Math.sin(angleSnow) * 0.2;
-
-          // 화면 밖으로 나가면 위로 리셋
-          if (f.x > snowW + 5 || f.x < -5 || f.y > snowH) {
-            if (i % 3 > 0) {
-              snowflakes[i] = {
-                x: Math.random() * snowW,
-                y: -10,
-                r: f.r,
-                d: f.d,
-              };
-            } else {
-              // 화면 오른쪽 끝에서 들어오는 느낌 추가
-              if (Math.sin(angleSnow) > 0) {
-                snowflakes[i] = {
-                  x: -5,
-                  y: Math.random() * snowH,
-                  r: f.r,
-                  d: f.d,
-                };
-              } else {
-                snowflakes[i] = {
-                  x: snowW + 5,
-                  y: Math.random() * snowH,
-                  r: f.r,
-                  d: f.d,
-                };
-              }
-            }
-          }
-        }
-      }
-
-      // 화면 크기 변경 시 캔버스 크기 재조정
-      window.addEventListener('resize', () => {
-        snowW = window.innerWidth;
-        snowH = window.innerHeight;
-        snowCanvas.width = snowW;
-        snowCanvas.height = snowH;
-      });
-
-      // 눈 애니메이션 시작
-      drawSnow();
-
-      // ==========================================
-      // [2] 기존 트리 로직 (Tree Logic)
-      // ==========================================
-      const toggleBtn = document.getElementById('toggleBtn');
-      const controlsPanel = document.getElementById('controlsPanel');
-
-      toggleBtn.addEventListener('click', (e) => {
-        e.stopPropagation();
-        controlsPanel.classList.toggle('active');
-        toggleBtn.innerHTML = controlsPanel.classList.contains('active')
-          ? '✖'
-          : '⚙️';
-      });
-
-      document.body.addEventListener('click', (e) => {
-        if (
-          controlsPanel.classList.contains('active') &&
-          !controlsPanel.contains(e.target) &&
-          e.target !== toggleBtn
-        ) {
-          controlsPanel.classList.remove('active');
-          toggleBtn.innerHTML = '⚙️';
-        }
-      });
-
-      const dotContainer = document.getElementById('dot-container');
-
-      const inputs = {
-        count: document.getElementById('dotsCountInput'),
-        xOffset: document.getElementById('xOffsetSlider'),
-        yOffset: document.getElementById('yOffsetSlider'),
-        xScale: document.getElementById('xScaleSlider'),
-        yScale: document.getElementById('yScaleSlider'),
-        delay: document.getElementById('delaySlider'),
-        gap: document.getElementById('dotGapSlider'),
-        taper: document.getElementById('dotXSmallerOffsetSlider'),
-        size: document.getElementById('dotSizeSlider'),
-      };
-
-      function updateLabel(input, id) {
-        const display = document.getElementById(`val_${id}`);
-        if (display) display.innerText = input.value;
-      }
-
-      inputs.count.addEventListener('input', () =>
-        updateLabel(inputs.count, 'dotsCountInput')
-      );
-      updateLabel(inputs.count, 'dotsCountInput');
-
-      let treeDots = [];
-      let angle = 0;
-      let opacity_min = 0.2;
-      let opacity_max = 1.0;
-      let animationId;
-
-      function initDots() {
-        dotContainer.innerHTML = '';
-        const count = parseInt(inputs.count.value, 10);
-
-        for (let i = 0; i < count; i++) {
-          const newDot = document.createElement('span');
-          newDot.className = 'tree-dot';
-          dotContainer.appendChild(newDot);
-        }
-        treeDots = Array.from(document.querySelectorAll('.tree-dot'));
-      }
-
-      inputs.count.addEventListener('input', initDots);
-
-      function animate() {
-        const xOffset = parseInt(inputs.xOffset.value, 10);
-        const yOffset = parseInt(inputs.yOffset.value, 10);
-        const xScale = parseInt(inputs.xScale.value, 10);
-        const yScale = parseInt(inputs.yScale.value, 10);
-        const delayVal = parseInt(inputs.delay.value, 10);
-        const dotGap = parseInt(inputs.gap.value, 10);
-        const taper = parseInt(inputs.taper.value, 10);
-        const baseSize = parseInt(inputs.size.value, 10);
-
-        const centerX = window.innerWidth / 2 + xOffset;
-        const centerY = window.innerHeight / 2 + yOffset;
-        const totalDots = treeDots.length;
-
-        treeDots.forEach((element, index) => {
-          const delay = (delayVal / totalDots) * index;
-          const currentAngle = angle - delay * 0.01;
-
-          const radiusModifier = taper * (totalDots - index);
-          const currentRadius = xScale - radiusModifier;
-
-          const x = centerX + currentRadius * Math.cos(currentAngle);
-          const y = centerY + yScale * Math.sin(currentAngle);
-          const topPos = y + dotGap * index;
-
-          const depth = Math.sin(currentAngle);
-
-          const opacity =
-            opacity_min + ((opacity_max - opacity_min) * (1 + depth)) / 2;
-
-          element.style.transform = `translate(${x}px, ${topPos}px)`;
-          element.style.width = `${baseSize}px`;
-          element.style.height = `${baseSize}px`;
-          element.style.opacity = opacity;
-          // 눈 내리는 효과와 겹치지 않게 z-index 조정 (눈은 0, 트리는 깊이에 따라 설정)
-          // depth가 -1~1이므로 0~200 사이로 변환하여 눈(z-index: 0) 위아래로 배치가 가능하게 할 수도 있으나
-          // 간단하게 눈보다 항상 위에 오도록 기본값을 높게 설정 (10 + ...)
-          element.style.zIndex = 10 + Math.floor(depth * 100);
-        });
-
-        angle += 0.02;
-        animationId = requestAnimationFrame(animate);
-      }
-
-      initDots();
-      animate();
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
