--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
 
     <div id="dot-container"></div>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
