feat: add desktop share button

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
     <div class="controls" id="controlsPanel">
       <div class="control-header">
         <span>Settings</span>
+        <button
+          id="shareBtnDesktop"
+          class="share-btn share-desktop"
+          aria-label="Share settings"
+        >
+          🔗
+        </button>
       </div>
 
       <div class="emoji-palette" id="emojiPalette">
